--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ $avatarHolderEl.backgroundBlur({
 <script src="//cdnjs.cloudflare.com/ajax/libs/velocity/1.2.2/velocity.min.js"></script>
 
 
-<script src="dist/background-blur.min.js"></script>
+<script src="src/background-blur.js"></script>
 <script>
     // Scripts for demo page
     $( document ).ready(function() {
@@ -486,7 +486,10 @@ $avatarHolderEl.backgroundBlur({
         $avatarHolderEl.backgroundBlur({
             imageURL : avatars[0], // URL to the image that will be used for blurring
             blurAmount : 50, // Amount of blur (higher amount degrades browser performance)
-            imageClass : 'avatar-blur' // CSS class that will be applied to the image and to the SVG element,
+            imageClass : 'avatar-blur', // CSS class that will be applied to the image and to the SVG element,
+            animateBlur: true,
+            // animateBlurDelay: '.1s',
+            preserveAspectRatio: 'xMidYMid slice'
         });
 
         // Avatar - based backgrounds
